# ubik-mirror

./: .clang-format  .gitignore  .indent.pro  ARCHITECTURE  ARCHITECTURE.markdown  CONTRIBUTING  GNUmakefile  Makefile.am  README  README.markdown  TODO  configure  configure.ac  env.sh
arch/: ARCHITECTURE.markdown
disasm/: .gitignore  Makefile.am  ubik-dis.c
docs/: adt-inst.txt  compilation-phases.txt  expel.md  literate.txt  log  multimethods.txt  packaging.txt  patterns.txt  ports.txt  recursion.txt  runtime.txt  schedule.txt  syntax-2.txt  type-decls.txt  type-infer.txt  ubik.md
expelc/: Base.hs  Blockify.hs  Expel.hs  Main.hs  Makefile.am  ParseUtil.hs  Parser.hs  Tokenize.hs  TypeParser.hs  expelc.c  expelc.cabal  expeli  expeli.c  libexpel.py
expelc/expelc/: Main.hs
expelc/src/Expel/: Base.hs  ParseUtil.hs  Parser.hs  TypeParser.hs
expelc/test/Expel/: ParserSpec.hs
expelrt/: Makefile.am  expelc.c  expelrt.c
hook/: .gitignore  GNUmakefile
hook/adt/: hook.c
hook/bool/: hook.c
hook/emit/: GNUmakefile  emit.c  hook.c
hook/eq/: hook.c
hook/math/: hook.c
hook/mm/: hook.c
hook/string/: hook.c
include/: GNUmakefile  Makefile.am
include/expel/: .gitignore  apply.h  assert.h  ast.h  bdagc.h  closure.h  compile.h  dagc.h  def-native.h  env.h  error.h  expel.h  explain.h  gc.h  gen.h  natives.h  parse.h  pointerset.h  resolve.h  schedule.h  stream.h  streamutil.h  string.h  substrate.h  timer.h  token.h  types.h  uri.h  util.h  value.h  vector.h  words.h
include/ubik/: adt.h  alloc.h  assert.h  assign.h  ast.h  bdagc.h  bytecode.h  charstack.h  clash.h  closure.h  compile.h  dagc.h  dbgsym.h  def-native.h  deque.h  env.h  eval.h  evaluator.h  expel.h  feedback.h  fileport.h  fun.h  gc.h  gen.h  hooks.h  import.h  infer.h  interfaces.h  jobq.h  list.h  literate.h  mtio.h  natives.h  package.h  parse.h  passthrough.h  patterns.h  pointerset.h  ports.h  queue.h  (+26 more)
lib/: GNUmakefile  boolean.uk  func.uk  functor.uk  list.uk  math.uk  maybe.uk  test_runner.sh
libexpel/: .gitignore  Makefile.am  apply.c  assert.c  ast.c  bdagc.c  closure.c  compile.c  ctors.c  dagc.c  def-native.h  env.c  error.c  eval.c  explain.c  gc.c  gen.c  grammar.y  humanize-poly.tree  load.c  natives.c  parse.c  parse.y  persist.c  pointerset.c  print-ast.c  refcount.c  resolve.c  rt.c  schedule.c  store.c  stream.c  streamutil.c  string.c  timer.c  token.l  types.c  uri-value.tree  uri.c  util.c  (+3 more)
libubik/: .gitignore  GNUmakefile  Makefile.am  adt.c  assign.c  ast.c  bdagc.c  closure.c  compile.c  dagc.c  env.c  error.c  eval.c  explain.c  gc.c  gen.c  grammar.y  infer.c  list.c  load.c  natives.c  parse.c  patterns.c  pointerset.c  print-ast.c  resolve.c  rt.c  schedule.c  store.c  stream.c  streamutil.c  string.c  timer.c  token.l  types.c  uri.c  util.c  value.c  vector.c
libubik/codegen/: assign.c  ast.c  bdagc.c  clash.c  closure.c  compile.c  gen.c  grammar.y  import.c  infer.c  interfaces.c  literate.c  package.c  parse.c  patterns.c  print-expr.c  recur.c  resolve.c  stringset.c  testing.c  token.l  tokenize.c  tokenstack.c  types.c  typesystem.c  walk.c
libubik/codegen/grammar/: 00-header.y  01-top.y  02-packaging.y  03-expr.y  04-cond.y  05-types.y  06-interfaces.y  07-test.y  99-footer.y  GNUmakefile
libubik/rt/: eval.c  evaluator.c  fileport.c  gc.c  jobq.c  mem.c  ports.c  queue.c  rat.c  rwlock.c  schedule.c  str.c  timer.c
libubik/shared/: adt.c  alloc.c  bytecode.c  charstack.c  dagc.c  dbgsym.c  deque.c  env.c  error.c  explain.c  feedback.c  fun.c  hooks.c  list.c  load.c  mtio.c  natives.c  passthrough.c  print-ast.c  rt.c  rttypes.c  store.c  stream.c  streamutil.c  string.c  stringset.c  typ.c  uri.c  util.c  value.c  vector.c
libubik/shared/natives/: adt-defs.h  native-adt.c  native-arithmetic.c  native-bool.c  native-seq.c  native-util.c
pyasm/: __init__.py  libexpel.py
res/: build-config.am  build-config.mk  compile-const.awk  compile-const.sed  conf-asan.sh  conf-gcdbg.sh  conf-rel.sh  const.txt  expel.vim  pre-commit  rst2html  ubik.vim
res/buildtree/: buildtree.py
res/rst/: rstheader.html
res/site/: GNUmakefile  index.html  logo.py
runexpel/: Makefile.am  runexpel.c
test/: GNUmakefile  run_tests.sh  test_all.c  unit.h
test/err-progs/: GNUmakefile  bad-type-2.uk  bad-type-3.uk  bad-type-4.uk  bad-type-5.uk  bad-type-6.uk  bad-type-7.uk  bad-type-8.uk  bad-type.uk  case-tail-disagree.uk  literate-line-no.rst  match-pattern-disagree.uk  name-clash.uk  no-immediate.uk  no-package.uk  no-top-type.uk  not-total-pred-block.uk  qualified-imports.uk  runner.sh  syntax.uk  syntax.xl  unapplyable.uk  unknown-name.uk  unknown-name.xl
test/lex/: emit-tokens.c
test/parse/: parse-file.c
test/prog/: .gitignore  GNUmakefile  Makefile.am  add.uk  add.xl  apply-types.uk  bench.sh  bind.uk  bind.xl  block.uk  boolean-splat.uk  boolean.uk  double-import.uk  fib.uk  fib.xl  filter.uk  global-recursive.uk  hello.uk  import-splat.uk  import.uk  import.xl  infer-hard.uk  inner-recursive.uk  interface-simple.uk  is-prime-fast.uk  is-prime.uk  lambda-simple.uk  lambda-simple.xl  lambda.uk  lambda.xl  list-range.uk  list.uk  literate-ooo.rst  literate-simple.ul  literate.rst  newton.uk  num.uk  num.xl  operators.uk  pair.uk  (+22 more)
test/pyasm/: .gitignore  GNUmakefile  Makefile.am  add.py  add.upy  add.xlpy  cond.xlpy  const-float.xlpy  const.py  const.xlpy  emit-poly.xlpy  huge.xlpy  loadstore.py  loadstore.xlpy  mult.xlpy  please-leak.xlpy  pyasm.c  ref.xlpy  runner.sh  simplefunc.upy  simplefunc.xlpy  uri.xlpy
test/unit/: GNUmakefile  Makefile.am  adt.c  buffer.c  deque.c  env.c  gc.c  generator.c  host_to_net.c  jobq.c  list.c  load_save.c  parenv.c  parq.c  path_concat.c  pointer_set.c  port.c  queue.c  rat.c  readfile.c  resolve.c  run_tests.sh  runner.sh  split.c  tokenize.c  types.c  unit.h  unit_tests.c  uri.c
testprog/: add.py  const.py  loadstore.py  simplefunc.py  uri.py
ub/: Makefile.am  ubi.c  ubic.c
ubik/: Makefile.am  ubik.c
xlc/: GNUmakefile
xlc/include/expel/: expel.h
xlc/libexpel/: ctors.c
xlc/test/: test_all.c  test_ctors.h
