Name:           expelc
Version:        0.0.1
Cabal-Version:  >= 1.2
Author:         Haldean Brown
Homepage:       http://haldean.org/expel

Executable expelc
  Build-Depends:
    base,
    parsec,
    mtl,
    text,
    hspec,
    concatenative==1.0.1,
    indents==0.3.3
  Extensions: OverloadedStrings, FlexibleContexts
  Main-is: Main.hs
