Name:           expelc
Version:        0.0.1
Cabal-Version:  >= 1.8
Author:         Haldean Brown
Homepage:       http://haldean.org/expel

Library
  Build-Depends:
    base,
    parsec,
    mtl,
    text,
    concatenative==1.0.1,
    indents==0.3.3
  Exposed-modules:
    Expel.Base
    Expel.Parser
  Other-modules:
    Expel.ParseUtil
    Expel.TypeParser
  Extensions: OverloadedStrings, FlexibleContexts
  Hs-source-dirs: src

Executable ec
  Build-Depends:
    base,
    expelc,
    text
  Extensions: OverloadedStrings, FlexibleContexts
  Hs-source-dirs: expelc
  Main-is: Main.hs

Test-suite spec
  Type:
    exitcode-stdio-1.0
  Ghc-options:
    -Wall
  Hs-source-dirs:
    test
  Main-is:
    Spec.hs
  Build-depends:
    base,
    expelc,
    hspec==2.*
  Extensions: OverloadedStrings, FlexibleContexts
