TESTS = \
	add.uk \
	bind.uk \
	block.uk \
	fib.uk \
	hello.uk \
	import.uk \
	lambda-simple.uk \
	lambda.uk \
	num.uk \
	pred-block.uk \
	print-lib.uk \
	record.uk \
	simple-adt.uk \
	type-decls.uk \
	zero-arity.uk

XFAIL_TESTS = record.uk type-decls.uk import.uk
TEST_EXTENSIONS = .uk
UK_LOG_COMPILER = run_test.sh
